feat: Upgrade to spring-boot 3, spring-cloud-aws 3 and AWS SDK 2
BREAKING CHANGES
no longer compatible to spring-cloud-aws 2 and the AWS SDK 1